fix footer spacing

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -232,14 +232,6 @@ pre {
     vertical-align: middle;
 }
 
-.social-media-list {
-  li {
-    padding-top: 5px;
-  }
-}
-
-
-
 /**
  * Tables
  */
